feat(增加ai):